# xiaohongshu-mcp-python

./: Dockerfile  README.md  browser.py  cookies.json  main.py  pyproject.toml  setup.py  xhs_actions.py
skills/xiaohongshu/: SKILL.md
skills/xiaohongshu-mcp/: SKILL.md
skills/xiaohongshu-mcp/references/: deploy.md  usage.md
skills/xiaohongshu/config/: accounts.json
skills/xiaohongshu/references/: publish-workflow.md
skills/xiaohongshu/scripts/: run.py
